--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'signing'
 
 group = "com.github.lant"
 archivesBaseName = "DotDump"
-version = '0.3'
+version = '0.4'
 
 repositories {
     mavenCentral()
@@ -29,7 +29,7 @@ signing {
 }
 
 dependencies {
-  testCompile group: 'junit', name: 'junit', version: '4.+'
+  testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
 uploadArchives {
