--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,12 @@
-apply plugin: 'java'
-apply plugin: 'maven'
-apply plugin: 'signing'
+plugins {
+  id "java"
+  id "maven"
+  id "signing"
+}
 
 group = "com.github.lant"
 archivesBaseName = "DotDump"
-version = '0.4'
+version = '0.5'
 
 def user = hasProperty('ossrhUsername') ? ossrhUsername : ""
 def pwd = hasProperty('ossrhPassword') ? ossrhPassword : ""
@@ -14,12 +16,10 @@ repositories {
 }
 
 task javadocJar(type: Jar) {
-    classifier = 'javadoc'
     from javadoc
 }
 
 task sourcesJar(type: Jar) {
-    classifier = 'sources'
     from sourceSets.main.allSource
 }
 
